# rekhtanavees

./: .gitignore  README.md  pyproject.toml  rekhtanavees.app.spec
docs/source/: conf.py  index.rst  overview.rst
docs/source/_static/: custom.css
docs/source/design/: codeLayout.rst  design.rst  index.rst
docs/source/design/modules/: constants.rst  index.rst  main.rst  settings.rst
docs/source/design/modules/audio/: audioclip.rst  audioproject.rst  audiorenderer.rst  clipimage.rst  index.rst  spectra.rst  transcript.rst
docs/source/design/modules/misc/: index.rst  utils.rst  ytdownloader.rst
docs/source/design/modules/ui/: audiospectrum.rst  index.rst  mainwindow.rst
docs/source/operations/: index.rst
docs/source/operations/dev-setup/: index.rst
docs/source/operations/prod-setup/: index.rst
docs/source/usage/: index.rst
docs/source/usage/cookbooks/: index.rst
docs/source/usage/tutorials/: howto-CreateContent.rst  howto-DocstringStyleGuide.rst  howto-GettingStarted.rst  howto-OrganizeDocumentation.rst  index.rst
docs/source/usage/userManual/: index.rst
installer/: rekhtanavees-installer.iss  rekhtanavees.ifp
rekhtanavees/: compileUI.py  constants.py  main.py  settings.py
rekhtanavees/audio/: __init__.py  audio.py  audioclip.py  audioproject.py  audiorenderer.py  clipimage.py  spectra.py  transcript.py
rekhtanavees/misc/: seperator.py  utils.py  ytdownloader.py
rekhtanavees/ui/: audioModel.py  audioSpectrum.py  audiolabel.py  fonts.qrc  imageviewer.py  main.qrc  main.ui  mainwindow.py  mainwindow.qrc  mainwindow.ui  projectwizard.py  recordingsModel.py  recordingwidget.py  recordingwidget.ui  ruler.py
scripts/: compileUI.py  generate-win-setup.bat
tests/: test_audioproject.py  test_naveesproject.py  test_utils.py  unsavedProject.toml
tests/audio/: test_audioclip.py  test_audioproject.py  test_audioproject.py.bak
